[package]
name = "passgen"
version = "0.1.0"
edition = "2024"
authors = ["dp"]
description = "Generate all types of passwords just using simple cli tool"
license = "MIT OR Apache-2.0"
repository = "https://github.com/durgaprasad118/Passgen"
readme = "README.md"
[dependencies]
clap = { version = "4.0", features = ["derive"] }
rand="0.8"
